hphp/test/zend/bad/ext/calendar/tests/bug53574_1.php
<?php
$x = 882858043;

var_dump(cal_from_jd($x, CAL_JULIAN));